...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/owner_button"
    tools:showIn="@layout/fragment_view_book_details">

    <Button
        android:id="@+id/view_requests_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_requests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
