<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewB"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:contentDescription="@string/book_photo"
            app:layout_constraintBottom_toTopOf="@+id/bookViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/bookViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bookViewStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookImage"
            tools:text="Book Title" />

        <TextView
            android:id="@+id/bookViewStatus"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/bookViewDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewTitle"
            tools:text="Status" />

        <TextView
            android:id="@+id/bookViewDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewStatus"
            tools:text="This is the description of the book. I hope you like the description of the book. There are many words in this description of the book. Are you impressed with how many words there are in the description of this book?" />

        <TextView
            android:id="@+id/bookViewAuthorHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/author"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewDescription" />

        <TextView
            android:id="@+id/bookViewAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewAuthorHeader"
            tools:text="Jeff Bezos" />

        <TextView
            android:id="@+id/bookViewISBNHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/isbn"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewAuthor" />

        <TextView
            android:id="@+id/bookViewISBN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewISBNHeader"
            tools:text="7483960471827" />

        <TextView
            android:id="@+id/bookViewOwnerHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/owner"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewISBN" />

        <com.google.android.material.chip.Chip
            android:id="@+id/owner_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="-4dp"
            app:chipIcon="@drawable/ic_baseline_person_24"
            app:chipMinHeight="32dp"
            app:chipMinTouchTargetSize="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookViewOwnerHeader"
            tools:text="bigperson" />

        <include
            layout="@layout/borrower_book_available"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_button" />

        <include
            layout="@layout/owner_book_available"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_button" />

        <include
            layout="@layout/book_accepted_or_borrowed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_button" />

        <include
            layout="@layout/book_borrowed_by_someone_else"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="571dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>