...
    <string name="search_failed">Failed to perform search.</string>
    <string name="searching_in_progress">Searching…</string>
    <string name="book_requested_notification_text">%1$s has requested your book %2$s.</string>
    <string name="request">Request</string>
    <string name="view_requests">View Requests</string>
    <string name="accept_request">Accept Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="request_accepted_notification_text">%1$s accepted your request for %2$s.</string>
    <string name="request_declined_notification_text">%1$s declined your request for %2$s.</string>
    <string name="book_photo">Book Photo</string>
    <string name="failed_to_get_notifications">Failed to get notifications.</string>
    <string name="failed_to_get_book_description">Failed to get book description: %1$s</string>
    <string name="title_activity_maps">Map</string>
...
    <string name="clear_all">Clear all</string>
    <string name="failed_to_clear_notifications">Failed to clear notifications: %1$s</string>
    <string name="channel_book_requested">Book Requested</string>
    <string name="channel_request_acknowledged">Request Acknowledged</string>
    <string name="no_pending_requests">No pending requests for this book</string>
    <string name="some_pending_requests">%1$d pending requests for this book</string>
    <string name="decline_this_request_prompt">Do you want to decline this request?</string>
    <string name="accept_this_request_prompt">Do you want to accept this request?</string>
</resources>
