...
    <item
        android:id="@+id/borrow"
        android:title="@string/borrow_tab"
        android:icon="@drawable/ic_borrow"/>

    <item
        android:id="@+id/my_books"
        android:title="@string/myBooks_tab"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"/>

    <item
        android:id="@+id/notifications"
        android:title="@string/notifications_tab"
...
